Fix alignment and layout of expert list items
CORL-863

--- a/src/core/client/stream/tabs/Configure/Q&A/ExpertSearchItem.css
+++ b/src/core/client/stream/tabs/Configure/Q&A/ExpertSearchItem.css
@@ -1,12 +1,6 @@
-.root {
-  margin-left: var(--v2-spacing-1);
-  margin-bottom: var(--v2-spacing-1);
-
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
+.button {
+  padding-top: var(--v2-spacing-1);
+  padding-bottom: var(--v2-spacing-1);
 }
 
 .username {
@@ -31,9 +25,4 @@
   font-family: var(--font-family-sans-serif);
   line-height: 1.375em;
   letter-spacing: 0.0125em;
-}
-
-.removeButton {
-  padding: var(--v2-spacing-1);
-  margin-right: 80px;
 }
